# GameHouse

./: .gitignore  CMakeLists.txt  README.txt
src/: ConnectionHandler.h  EntityInteractionEvent.h  Event.cpp  Event.h  GameStateChangeEvent.h  PlayerInputEvent.cpp  PlayerInputEvent.h
test/: CMakeLists.txt  GameHouseTests.cpp  TestingClasses.cpp
